<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dentpluslogo"/>

    <EditText
        android:id="@+id/etUsernameMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_email_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Nume utilizator"
        android:inputType="text"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#FFF"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFF" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_lock_white_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#FFF"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFF" />

    <CheckBox
        android:id="@+id/cbrememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:buttonTint="#FFF"
        android:textSize="16sp"
        android:text="@string/check_remember_me"
        android:padding="8dp"
        android:layout_gravity="start"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="70dp"
        android:background="@drawable/background_login"
        android:text="@string/btLogin"
        android:clickable="true"
        android:padding="16dp"
        android:textAllCaps="false"
        android:textColor="@color/login"
        android:textSize="18sp"
        android:focusable="true" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_signup"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/loginAdmn"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:focusable="true" />



    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:textColor="@color/login"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:padding="16dp"
        />

</LinearLayout>

</LinearLayout>