<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminInterface.LogInAdministrator"
    android:background="@drawable/login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dentpluslogo"/>

        <EditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_email_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hintUserName"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#FFF"
            android:autofillHints="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_lock_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#FFF"
            android:layout_marginTop="20dp"
            android:autofillHints="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />

        <CheckBox
            android:id="@+id/cbRMAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:buttonTint="#FFF"
            android:textSize="16sp"
            android:text="@string/check_remember_me"
            android:padding="8dp"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/btnLogAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="70dp"
            android:background="@drawable/background_login"
            android:text="@string/btLogin"
            android:clickable="true"
            android:padding="16dp"
            android:textAllCaps="false"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:focusable="true" />


    </LinearLayout>

</LinearLayout>